--- a/shoppingcart-webparent/shoppingcart-backend/src/main/resources/application.properties
+++ b/shoppingcart-webparent/shoppingcart-backend/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8082
 
 server.servlet.context-path=/ShoppingCartAdmin 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/shoppingcart
+spring.datasource.url=jdbc:mysql://localhost:3306/myshopping
 spring.datasource.username=root
 spring.datasource.password=
 
