--- a/shoppingcart-webparent/shoppingcart-frontend/src/main/resources/application.properties
+++ b/shoppingcart-webparent/shoppingcart-frontend/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-server.port=8083
+server.port=8084
 
 server.servlet.context-path=/ShoppingCartClient
 
-spring.datasource.url=jdbc:mysql://localhost:3306/shoppingcart
+spring.datasource.url=jdbc:mysql://localhost:3306/myshopping
 spring.datasource.username=root
 spring.datasource.password=
 
